--- a/Főépület_Földszint.html
+++ b/Főépület_Földszint.html
@@ -4,18 +4,14 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="gszi.css">
         <title>
-            GSZI Térkép
+            Főépület - Földszint
         </title>
     </head>
     <body>
         <div id="fejlec">
             <h1>Békéscsabai SZC Nemes Tihamér Technikum és Kollégium</h1>
             <div id="menu">
-            </div>
-        </div>
-        <div id=terkep>
-            <img src="térkép.png">
-            <a href="Főépület_Földszint.html" style="position: absolute; left: 198px; top: 218px; width: 352px; height: 363px"></a>
+            <h2><a href="index.html">Vissza az udvarra</a></h2>
         </div>
     </body>
 </html>
