--- a/Banki_Donat_embed.html
+++ b/Banki_Donat_embed.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -81,160 +81,160 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
-style='font-size:12.0pt;line-height:107%'>Bánki Donát</span></b></p>
+style='font-size:12.0pt;line-height:107%'>BĂˇnki DonĂˇt</span></b></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Munkássága</span></b></p>
+style='font-size:12.0pt'>MunkĂˇssĂˇga</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A budapesti
-Műegyetemen szerzett gépészmérnöki diplomát. Az iparban helyezkedett el
-szerkesztőmérnökként (MÁV gépgyár, majd Ganz-gyár). Az egyetemen 1879–80-ban a
-műszaki mechanika tanszéken tanársegéd volt, majd 1899-től haláláig a
-hidrogépek, kompresszorok és gőzturbinák szerkezettanának professzora.</p>
+MĂ»egyetemen szerzett gĂ©pĂ©szmĂ©rnĂ¶ki diplomĂˇt. Az iparban helyezkedett el
+szerkesztĂµmĂ©rnĂ¶kkĂ©nt (MĂV gĂ©pgyĂˇr, majd Ganz-gyĂˇr). Az egyetemen 1879â€“80-ban a
+mĂ»szaki mechanika tanszĂ©ken tanĂˇrsegĂ©d volt, majd 1899-tĂµl halĂˇlĂˇig a
+hidrogĂ©pek, kompresszorok Ă©s gĂµzturbinĂˇk szerkezettanĂˇnak professzora.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Munkássága
-szorosan összekapcsolódott Csonka Jánossal, akivel együtt 1890-re
-kifejlesztették az ún. Bánki-Csonka motort, amely a Ganz-gyár nemzetközileg is
-versenyképes terméke volt. A Pallas nagy lexikona szerzőinek egyike volt
-1893-tól. 1893. február 11-én Csonkával együtt szabadalmaztatta a fúvókás
-benzinkarburátort (porlasztót), megelőzve ezzel a külföldön általánosan
-úttörőnek tartott Wilhelm Maybachot. 1894-ben szabadalmaztatta az első
-nagynyomású robbanómotort, a saját korában méltán világhírű Bánki-motort,
-amelynél a robbanókeveréket a hengerbe porlasztott vízzel hűtötte le, s ezzel a
-motor hatásfokát korábban nem remélt mértékben sikerült fokoznia.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>MunkĂˇssĂˇga
+szorosan Ă¶sszekapcsolĂłdott Csonka JĂˇnossal, akivel egyĂĽtt 1890-re
+kifejlesztettĂ©k az Ăşn. BĂˇnki-Csonka motort, amely a Ganz-gyĂˇr nemzetkĂ¶zileg is
+versenykĂ©pes termĂ©ke volt. A Pallas nagy lexikona szerzĂµinek egyike volt
+1893-tĂłl. 1893. februĂˇr 11-Ă©n CsonkĂˇval egyĂĽtt szabadalmaztatta a fĂşvĂłkĂˇs
+benzinkarburĂˇtort (porlasztĂłt), megelĂµzve ezzel a kĂĽlfĂ¶ldĂ¶n ĂˇltalĂˇnosan
+ĂşttĂ¶rĂµnek tartott Wilhelm Maybachot. 1894-ben szabadalmaztatta az elsĂµ
+nagynyomĂˇsĂş robbanĂłmotort, a sajĂˇt korĂˇban mĂ©ltĂˇn vilĂˇghĂ­rĂ» BĂˇnki-motort,
+amelynĂ©l a robbanĂłkeverĂ©ket a hengerbe porlasztott vĂ­zzel hĂ»tĂ¶tte le, s ezzel a
+motor hatĂˇsfokĂˇt korĂˇbban nem remĂ©lt mĂ©rtĂ©kben sikerĂĽlt fokoznia.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Mind a
-kompresszió-növelés, mind a vízbefecskendezés elsőként Bánki által tisztázott
-elvét később is alkalmazták, bár a Bánki-motor elterjedését a néhány évvel
-később megjelent dízelmotor megakadályozta. Az általa 1917-ben feltalált
-Bánki-turbina új utakat nyitott a törpe vízierőművek fejlesztésében. 1918-ban
-nagyszabású tervet dolgozott ki a Vaskapu vízerejének hasznosítására.</p>
+kompressziĂł-nĂ¶velĂ©s, mind a vĂ­zbefecskendezĂ©s elsĂµkĂ©nt BĂˇnki Ăˇltal tisztĂˇzott
+elvĂ©t kĂ©sĂµbb is alkalmaztĂˇk, bĂˇr a BĂˇnki-motor elterjedĂ©sĂ©t a nĂ©hĂˇny Ă©vvel
+kĂ©sĂµbb megjelent dĂ­zelmotor megakadĂˇlyozta. Az Ăˇltala 1917-ben feltalĂˇlt
+BĂˇnki-turbina Ăşj utakat nyitott a tĂ¶rpe vĂ­zierĂµmĂ»vek fejlesztĂ©sĂ©ben. 1918-ban
+nagyszabĂˇsĂş tervet dolgozott ki a Vaskapu vĂ­zerejĂ©nek hasznosĂ­tĂˇsĂˇra.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A Magyar
-Tudományos Akadémia levelező tagja volt 1911-től. A vízturbináért Bánkit halála
-után négy évvel 1926-ban a Magyar Tudományos Akadémia nagyjutalmával tüntette
-ki. Irat- és kézirathagyatékának nagy része a BME OMIKK Levéltárában
-digitalizálva is megtalálható. Jelentős gépszerkesztői munkássága, szabadalmi
-tevékenysége mellett nagy hivatástudattal látta el oktatói feladatait. Nagy
-hangsúlyt fektetett arra, hogy a hallgatók felkészülését előadásjegyzetekkel is
-segítse. Egyetemi tanári tevékenysége során a mérnökképzésben bevezette a
-laboratóriumi képzést.</p>
+TudomĂˇnyos AkadĂ©mia levelezĂµ tagja volt 1911-tĂµl. A vĂ­zturbinĂˇĂ©rt BĂˇnkit halĂˇla
+utĂˇn nĂ©gy Ă©vvel 1926-ban a Magyar TudomĂˇnyos AkadĂ©mia nagyjutalmĂˇval tĂĽntette
+ki. Irat- Ă©s kĂ©zirathagyatĂ©kĂˇnak nagy rĂ©sze a BME OMIKK LevĂ©ltĂˇrĂˇban
+digitalizĂˇlva is megtalĂˇlhatĂł. JelentĂµs gĂ©pszerkesztĂµi munkĂˇssĂˇga, szabadalmi
+tevĂ©kenysĂ©ge mellett nagy hivatĂˇstudattal lĂˇtta el oktatĂłi feladatait. Nagy
+hangsĂşlyt fektetett arra, hogy a hallgatĂłk felkĂ©szĂĽlĂ©sĂ©t elĂµadĂˇsjegyzetekkel is
+segĂ­tse. Egyetemi tanĂˇri tevĂ©kenysĂ©ge sorĂˇn a mĂ©rnĂ¶kkĂ©pzĂ©sben bevezette a
+laboratĂłriumi kĂ©pzĂ©st.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Írásai</span></b></p>
+style='font-size:12.0pt'>ĂŤrĂˇsai</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Írásaiban
-főként a gázmotorok elméletével, a gőzturbinák és hidrogépek szerkesztési
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>ĂŤrĂˇsaiban
+fĂµkĂ©nt a gĂˇzmotorok elmĂ©letĂ©vel, a gĂµzturbinĂˇk Ă©s hidrogĂ©pek szerkesztĂ©si
 alapelveivel foglalkozott.</p>
 
 <p class=MsoListParagraphCxSpFirst style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Gyakorlati hidraulika és hidrogépek (jegyzet, I–II., Bp.,
-1901–02);</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Gyakorlati hidraulika Ă©s hidrogĂ©pek (jegyzet, Iâ€“II., Bp.,
+1901â€“02);</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Gőzturbinák. Légsűrítő gépek (kőnyomat, Bp., 1903);</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>GĂµzturbinĂˇk. LĂ©gsĂ»rĂ­tĂµ gĂ©pek (kĂµnyomat, Bp., 1903);</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Energiaátalakulások folyadékokban (Bp., 1916, németül: Berlin:
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>EnergiaĂˇtalakulĂˇsok folyadĂ©kokban (Bp., 1916, nĂ©metĂĽl: Berlin:
 1921);</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>Neue Wasserturbine (Berlin, 1917);</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>A Vaskapu-vízierőmű tervezete (I–II., Bp., 1918);</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>A Vaskapu-vĂ­zierĂµmĂ» tervezete (Iâ€“II., Bp., 1918);</p>
 
 <p class=MsoListParagraphCxSpLast style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Dugattyús szivattyúk és kompresszorok gépszerkezettana (Bp.,
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>DugattyĂşs szivattyĂşk Ă©s kompresszorok gĂ©pszerkezettana (Bp.,
 1932).</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Emlékezete</span></b></p>
+style='font-size:12.0pt'>EmlĂ©kezete</span></b></p>
 
 <p class=MsoListParagraphCxSpFirst style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Az első benzinporlasztót a Műszaki Emléket Nyilvántartó és Gyűjtő
-Csoport őrzi.</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Az elsĂµ benzinporlasztĂłt a MĂ»szaki EmlĂ©ket NyilvĂˇntartĂł Ă©s GyĂ»jtĂµ
+Csoport Ăµrzi.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>A Bánki-Csonka-motor első példánya ma a Budapesti Közlekedési
-Múzeumban látható.</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>A BĂˇnki-Csonka-motor elsĂµ pĂ©ldĂˇnya ma a Budapesti KĂ¶zlekedĂ©si
+MĂşzeumban lĂˇthatĂł.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Több oktatási intézmény névadója</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>TĂ¶bb oktatĂˇsi intĂ©zmĂ©ny nĂ©vadĂłja</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Óbudai Egyetem Bánki Donát Gépész és Biztonságtechnikai Mérnöki
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Ă“budai Egyetem BĂˇnki DonĂˇt GĂ©pĂ©sz Ă©s BiztonsĂˇgtechnikai MĂ©rnĂ¶ki
 Kar</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Bánki Donát Közlekedésgépészeti Szakközépiskola és Szakiskola</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>BĂˇnki DonĂˇt KĂ¶zlekedĂ©sgĂ©pĂ©szeti SzakkĂ¶zĂ©piskola Ă©s Szakiskola</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Bánki Donát Szakképző Iskola Ajka</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>BĂˇnki DonĂˇt SzakkĂ©pzĂµ Iskola Ajka</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Bánki Donát Gimnázium és Szakközépiskola Dunaújváros</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>BĂˇnki DonĂˇt GimnĂˇzium Ă©s SzakkĂ¶zĂ©piskola DunaĂşjvĂˇros</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Pécsi Bánki Donát utcai Általános Iskola</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>PĂ©csi BĂˇnki DonĂˇt utcai ĂltalĂˇnos Iskola</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Bánki Donátról elnevezett kisbolygó, a 131763 Donátbánki</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>BĂˇnki DonĂˇtrĂłl elnevezett kisbolygĂł, a 131763 DonĂˇtbĂˇnki</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Szülőfalujában, Bakonybánkon a Bánki Donát Műszaki Egyesület őrzi
-a feltaláló emlékét.</p>
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>SzĂĽlĂµfalujĂˇban, BakonybĂˇnkon a BĂˇnki DonĂˇt MĂ»szaki EgyesĂĽlet Ăµrzi
+a feltalĂˇlĂł emlĂ©kĂ©t.</p>
 
 <p class=MsoListParagraphCxSpLast style='margin-bottom:0cm;text-indent:-18.0pt;
-line-height:normal'><span style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>Születésének 150. évfordulójára a Magyar Nemzeti Bank emlékpénzt
+line-height:normal'><span style='font-family:Symbol'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>SzĂĽletĂ©sĂ©nek 150. Ă©vfordulĂłjĂˇra a Magyar Nemzeti Bank emlĂ©kpĂ©nzt
 adott ki.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>A Bánki-emlékérem</span></b></p>
+style='font-size:12.0pt'>A BĂˇnki-emlĂ©kĂ©rem</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Emlékére a
-Gépipari Tudományos Egyesület 1955-ben három fokozatú, díjazással egybekötött,
-évenként kiosztott műszaki kitüntetést alapított.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>EmlĂ©kĂ©re a
+GĂ©pipari TudomĂˇnyos EgyesĂĽlet 1955-ben hĂˇrom fokozatĂş, dĂ­jazĂˇssal egybekĂ¶tĂ¶tt,
+Ă©venkĂ©nt kiosztott mĂ»szaki kitĂĽntetĂ©st alapĂ­tott.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Diák-nóta</span></b></p>
+style='font-size:12.0pt'>DiĂˇk-nĂłta</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A műegyetemi
-hallgatók alábbi nótája is szeretettel emlékezik tanárukról:</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A mĂ»egyetemi
+hallgatĂłk alĂˇbbi nĂłtĂˇja is szeretettel emlĂ©kezik tanĂˇrukrĂłl:</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Hidrogépek,
-kompresszorok, turbinák…</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>HidrogĂ©pek,
+kompresszorok, turbinĂˇkâ€¦</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Bánkinak a
-Laval-csövön azt fújják:</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>BĂˇnkinak a
+Laval-csĂ¶vĂ¶n azt fĂşjjĂˇk:</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Expandálnék,
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>ExpandĂˇlnĂ©k,
 hej de nem tudok,</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Mert az
-izotermám nagyon kanyarog.</p>
+izotermĂˇm nagyon kanyarog.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><img width=250
-height=347 id="Kép 1" src="Banki_Donat_embed_elemei/image001.png"></p>
+height=347 id="KĂ©p 1" src="Banki_Donat_embed_elemei/image001.png"></p>
 
 </div>
 
