--- a/Banki_Donat_embed.html
+++ b/Banki_Donat_embed.html
@@ -13,7 +13,7 @@
 	{font-family:"Cambria Math";
 	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
-	{font-family:Calibri;
+	{font-family:"Ariel";
 	panose-1:2 15 5 2 2 2 4 3 2 4;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
