--- a/Banki_Donat_embed.html
+++ b/Banki_Donat_embed.html
@@ -1,7 +1,8 @@
 <html lang="hu">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
