--- a/Arany_Janos_embed.html
+++ b/Arany_Janos_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -41,140 +42,140 @@ div.WordSection1
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
-style='font-size:12.0pt;line-height:107%'>Arany János</span></b></p>
+style='font-size:12.0pt;line-height:107%'>Arany JĂˇnos</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Arany és a zene</span></b></p>
+style='font-size:12.0pt'>Arany Ă©s a zene</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany János már
-gyermekkorában gitározott és zongorázott. Saját elmondása szerint, amikor
-Debrecenben felcsapott színésznek, szép, csengő hangja volt. Értett a
-kottaíráshoz is, de nem tudni, kitől tanulta. Életének utolsó éveiben, az
-1870-es évek elején névnapjára gitárt kapott ajándékba a barátaitól.
-Emlékezetből leírta ifjúkorának mindegy 150 kedvelt dalát. Gitározás közben
-Petőfi Sándor, Kölcsey Ferenc, Amade László és a saját verseire született,
-kíséret nélküli melódiákat papírra vetett, és azzal adta át Bartalus István
-barátjának, hogy csak halála után hozhatja nyilvánosságra. Bartalus 1883.
-január 31-én a Kisfaludy Társaság ülésén jelentette be az Arany hagyatékából
-maradt dalokat, és Láng Fülöp operaénekes előadásában, Bartalus
-zongorakíséretében tízet elő is adott közülük.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany JĂˇnos mĂˇr
+gyermekkorĂˇban gitĂˇrozott Ă©s zongorĂˇzott. SajĂˇt elmondĂˇsa szerint, amikor
+Debrecenben felcsapott szĂ­nĂ©sznek, szĂ©p, csengĂµ hangja volt. Ă‰rtett a
+kottaĂ­rĂˇshoz is, de nem tudni, kitĂµl tanulta. Ă‰letĂ©nek utolsĂł Ă©veiben, az
+1870-es Ă©vek elejĂ©n nĂ©vnapjĂˇra gitĂˇrt kapott ajĂˇndĂ©kba a barĂˇtaitĂłl.
+EmlĂ©kezetbĂµl leĂ­rta ifjĂşkorĂˇnak mindegy 150 kedvelt dalĂˇt. GitĂˇrozĂˇs kĂ¶zben
+PetĂµfi SĂˇndor, KĂ¶lcsey Ferenc, Amade LĂˇszlĂł Ă©s a sajĂˇt verseire szĂĽletett,
+kĂ­sĂ©ret nĂ©lkĂĽli melĂłdiĂˇkat papĂ­rra vetett, Ă©s azzal adta Ăˇt Bartalus IstvĂˇn
+barĂˇtjĂˇnak, hogy csak halĂˇla utĂˇn hozhatja nyilvĂˇnossĂˇgra. Bartalus 1883.
+januĂˇr 31-Ă©n a Kisfaludy TĂˇrsasĂˇg ĂĽlĂ©sĂ©n jelentette be az Arany hagyatĂ©kĂˇbĂłl
+maradt dalokat, Ă©s LĂˇng FĂĽlĂ¶p operaĂ©nekes elĂµadĂˇsĂˇban, Bartalus
+zongorakĂ­sĂ©retĂ©ben tĂ­zet elĂµ is adott kĂ¶zĂĽlĂĽk.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Jakab István
-zenésítette meg a Nemzetőr-dal (1848) című versét, mely népdallá vált. Arany
-Jánosnak az 1874–82 közötti évekből 19 saját dala maradt fenn, ezek közül tíz
-megjelent nyomtatásban 1883-ban Bartalus István zongorakíséretével. Arany
-néhány dalszöveget is írt. 1849-ben Festetics Leó zenéjére írta a Kondorosi
-csárda mellett című versét. 1856. április 17-én küldte el Hej iharfa, juharfa
-című versét Simonffy Kálmán zeneszerzőnek. Ugyancsak 1856-ban írta Volt nekem
-egy rigószőrű paripám kezdetű versét, melyet Egressi Samu zenésített meg.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Jakab IstvĂˇn
+zenĂ©sĂ­tette meg a NemzetĂµr-dal (1848) cĂ­mĂ» versĂ©t, mely nĂ©pdallĂˇ vĂˇlt. Arany
+JĂˇnosnak az 1874â€“82 kĂ¶zĂ¶tti Ă©vekbĂµl 19 sajĂˇt dala maradt fenn, ezek kĂ¶zĂĽl tĂ­z
+megjelent nyomtatĂˇsban 1883-ban Bartalus IstvĂˇn zongorakĂ­sĂ©retĂ©vel. Arany
+nĂ©hĂˇny dalszĂ¶veget is Ă­rt. 1849-ben Festetics LeĂł zenĂ©jĂ©re Ă­rta a Kondorosi
+csĂˇrda mellett cĂ­mĂ» versĂ©t. 1856. Ăˇprilis 17-Ă©n kĂĽldte el Hej iharfa, juharfa
+cĂ­mĂ» versĂ©t Simonffy KĂˇlmĂˇn zeneszerzĂµnek. Ugyancsak 1856-ban Ă­rta Volt nekem
+egy rigĂłszĂµrĂ» paripĂˇm kezdetĂ» versĂ©t, melyet Egressi Samu zenĂ©sĂ­tett meg.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Pázmán lovag
-című vígballadájának témája ifj. Johann Strauss egyedüli operájának volt
-témája, Dóczy Lajos átírásában.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>PĂˇzmĂˇn lovag
+cĂ­mĂ» vĂ­gballadĂˇjĂˇnak tĂ©mĂˇja ifj. Johann Strauss egyedĂĽli operĂˇjĂˇnak volt
+tĂ©mĂˇja, DĂłczy Lajos ĂˇtĂ­rĂˇsĂˇban.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Művei</span></b></p>
+style='font-size:12.0pt'>MĂ»vei</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany János
-Összes verse</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany JĂˇnos
+Ă–sszes verse</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Őszikék Elektronikus
-kiállítás a Magyar Elektronikus Könyvtárban</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Ă•szikĂ©k Elektronikus
+kiĂˇllĂ­tĂˇs a Magyar Elektronikus KĂ¶nyvtĂˇrban</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Művei a Project
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>MĂ»vei a Project
 Gutenbergen</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany János
-művei a Mercator Stúdió Elektronikus Könyvkiadónál</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany JĂˇnos
+mĂ»vei a Mercator StĂşdiĂł Elektronikus KĂ¶nyvkiadĂłnĂˇl</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany versek
-neves előadóktól (online hallgatható)</p>
+neves elĂµadĂłktĂłl (online hallgathatĂł)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany János
-versei műfordításokban Bábel Web Antológia</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany JĂˇnos
+versei mĂ»fordĂ­tĂˇsokban BĂˇbel Web AntolĂłgia</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany János
-prózai dolgozatai MTA</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany JĂˇnos
+prĂłzai dolgozatai MTA</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Kapcsos könyv
-(kézirat)</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Kapcsos kĂ¶nyv
+(kĂ©zirat)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany János
-összes művei, Akadémiai Kiadó</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arany JĂˇnos
+Ă¶sszes mĂ»vei, AkadĂ©miai KiadĂł</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Műfordításai</span></b></p>
+style='font-size:12.0pt'>MĂ»fordĂ­tĂˇsai</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Kezdetben
-latin, görög és német nyelvű munkákból fordított, de ahogy haladt előre az
-angol nyelvben, úgy ért oda élete legjelentősebb fordításaihoz. Műfordításainak
-eredménye, hogy nevéhez köthető a magyar műfordítás-irodalom fellendítése.
-1860-ban lett a Kisfaludy Társaság igazgatója, és az ő irányításával alakult
-meg a társaság Shakespeare-bizottsága. Ez indította meg a legnagyobb arányú
-magyar műfordítási vállalkozást, a teljes Shakespeare-kiadást. Tizenkilenc
-kötetben, 1864 és 1879 között jelentek meg a sorozat részei, melynek kiadási
-költségeit Tomori Anasztáz vállalta magára. Arany a már régebben megkezdett
-János királlyal és a Szentivánéji álommal szerepelt, illetve a sorozathoz
-készítette el a klasszikussá vált Hamlet-fordítását.</p>
+latin, gĂ¶rĂ¶g Ă©s nĂ©met nyelvĂ» munkĂˇkbĂłl fordĂ­tott, de ahogy haladt elĂµre az
+angol nyelvben, Ăşgy Ă©rt oda Ă©lete legjelentĂµsebb fordĂ­tĂˇsaihoz. MĂ»fordĂ­tĂˇsainak
+eredmĂ©nye, hogy nevĂ©hez kĂ¶thetĂµ a magyar mĂ»fordĂ­tĂˇs-irodalom fellendĂ­tĂ©se.
+1860-ban lett a Kisfaludy TĂˇrsasĂˇg igazgatĂłja, Ă©s az Ăµ irĂˇnyĂ­tĂˇsĂˇval alakult
+meg a tĂˇrsasĂˇg Shakespeare-bizottsĂˇga. Ez indĂ­totta meg a legnagyobb arĂˇnyĂş
+magyar mĂ»fordĂ­tĂˇsi vĂˇllalkozĂˇst, a teljes Shakespeare-kiadĂˇst. Tizenkilenc
+kĂ¶tetben, 1864 Ă©s 1879 kĂ¶zĂ¶tt jelentek meg a sorozat rĂ©szei, melynek kiadĂˇsi
+kĂ¶ltsĂ©geit Tomori AnasztĂˇz vĂˇllalta magĂˇra. Arany a mĂˇr rĂ©gebben megkezdett
+JĂˇnos kirĂˇllyal Ă©s a SzentivĂˇnĂ©ji Ăˇlommal szerepelt, illetve a sorozathoz
+kĂ©szĂ­tette el a klasszikussĂˇ vĂˇlt Hamlet-fordĂ­tĂˇsĂˇt.</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Jelentősebb műfordításai:</span></b></p>
+style='font-size:12.0pt'>JelentĂµsebb mĂ»fordĂ­tĂˇsai:</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Versek</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Sir Patrick
-Spens (skót ballada); kínai népballadák (angolból)</p>
+Spens (skĂłt ballada); kĂ­nai nĂ©pballadĂˇk (angolbĂłl)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>néhány vers,
-ballada, epigramma Horatiustól, Ludwig August Frankltól, Robert Burnstől,
-Goethétől, Byrontól (Az új görög dalnok – a Don Juan című elbeszélő költemény
-részlete), Thomas Moore-tól.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>nĂ©hĂˇny vers,
+ballada, epigramma HoratiustĂłl, Ludwig August FrankltĂłl, Robert BurnstĂµl,
+GoethĂ©tĂµl, ByrontĂłl (Az Ăşj gĂ¶rĂ¶g dalnok â€“ a Don Juan cĂ­mĂ» elbeszĂ©lĂµ kĂ¶ltemĂ©ny
+rĂ©szlete), Thomas Moore-tĂłl.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Színművek</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>SzĂ­nmĂ»vek</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Arisztophanész
-vígjátékai</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>ArisztophanĂ©sz
+vĂ­gjĂˇtĂ©kai</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Shakespeare</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Hamlet, dán
-királyfi</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Hamlet, dĂˇn
+kirĂˇlyfi</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>János király</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>JĂˇnos kirĂˇly</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Szentivánéji
-álom</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>SzentivĂˇnĂ©ji
+Ăˇlom</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Wikisource-logo.svg</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A magyar
-Wikiforrásban további forrásszövegek találhatóak</p>
+WikiforrĂˇsban tovĂˇbbi forrĂˇsszĂ¶vegek talĂˇlhatĂłak</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Kategória:Arany
-János fordításai témában.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>KategĂłria:Arany
+JĂˇnos fordĂ­tĂˇsai tĂ©mĂˇban.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Prózafordítások</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>PrĂłzafordĂ­tĂˇsok</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Nyikolaj Gogol:
-A köpönyeg (német nyelvű kiadás alapján)</p>
+A kĂ¶pĂ¶nyeg (nĂ©met nyelvĂ» kiadĂˇs alapjĂˇn)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Egyesületi,
-testületi tagságai</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>EgyesĂĽleti,
+testĂĽleti tagsĂˇgai</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A Magyar
-Tudományos Akadémia tiszteletbeli főtitkára, igazgatója és rendes tagja</p>
+TudomĂˇnyos AkadĂ©mia tiszteletbeli fĂµtitkĂˇra, igazgatĂłja Ă©s rendes tagja</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A Kisfaludy
-Társaság igazgatója és rendes tagja</p>
+TĂˇrsasĂˇg igazgatĂłja Ă©s rendes tagja</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A Concordia
-budapesti jótékonysági egylet tiszteletbeli tagja</p>
+budapesti jĂłtĂ©konysĂˇgi egylet tiszteletbeli tagja</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A
-bölcsészhallgatókat segítő egyesület bizottságának tiszteletbeli tagja</p>
+bĂ¶lcsĂ©szhallgatĂłkat segĂ­tĂµ egyesĂĽlet bizottsĂˇgĂˇnak tiszteletbeli tagja</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><img width=224
-height=225 id="Kép 1" src="Arany_Janos_elemei/image001.png"></p>
+height=225 id="KĂ©p 1" src="Arany_Janos_elemei/image001.png"></p>
 
 </div>
 
